Audio autoplay ok with new AudioContext

--- a/src/assets/molrepos/moldeoorg/Speak/ojos.cfg
+++ b/src/assets/molrepos/moldeoorg/Speak/ojos.cfg
@@ -211,17 +211,17 @@
         </PARAM>
         <PARAM name="emittervectorx" type="FUNCTION">
             <VAL>
-                <D type="FUNCTION">1.0*1.1</D>
+                <D type="FUNCTION">1.0*1.2</D>
             </VAL>
         </PARAM>
         <PARAM name="emittervectory" type="FUNCTION">
             <VAL>
-                <D type="FUNCTION">1.0*1.1</D>
+                <D type="FUNCTION">1.0*1.2</D>
             </VAL>
         </PARAM>
         <PARAM name="emittervectorz" type="FUNCTION">
             <VAL>
-                <D type="FUNCTION">1.0*1.1</D>
+                <D type="FUNCTION">1.0*1.2</D>
             </VAL>
         </PARAM>
         <PARAM name="randomposition" type="FUNCTION">
@@ -266,7 +266,7 @@
         </PARAM>
         <PARAM name="randommotion" type="FUNCTION">
             <VAL>
-                <D type="FUNCTION">0.7</D>
+                <D type="FUNCTION">0.07</D>
             </VAL>
         </PARAM>
         <PARAM name="randommotionx" type="FUNCTION">
@@ -301,12 +301,12 @@
         </PARAM>
         <PARAM name="scalex_particle" type="SCALEX">
             <VAL>
-                <D type="FUNCTION">0.5+0.5*cos(time*0.001)*(1.0+0.9*cos(time+0.01+particleindex*1234)+0.015*cos(time*100+particleindex*1234))</D>
+                <D type="FUNCTION">0.5+0.5*cos(time*0.001)*(1.0+0.9*cos(time*0.001+0.01+particleindex*1234)+0.015*cos(time*100+particleindex*1234))</D>
             </VAL>
         </PARAM>
         <PARAM name="scaley_particle" type="SCALEY">
             <VAL>
-                <D type="FUNCTION">0.5+0.5*cos(time*0.001)*(1.0+0.9*cos(time+0.01+particleindex*1234)+0.015*cos(time*100+particleindex*1234))</D>
+                <D type="FUNCTION">0.5+0.5*cos(time*0.001)*(1.0+0.9*cos(time*0.001+0.01+particleindex*1234)+0.015*cos(time*100+particleindex*1234))</D>
             </VAL>
         </PARAM>
         <PARAM name="scalez_particle" type="SCALEZ">
