--- a/src/assets/molrepos/moldeoorg/Speak/particlessimple.cfg
+++ b/src/assets/molrepos/moldeoorg/Speak/particlessimple.cfg
@@ -295,12 +295,12 @@
         </PARAM>
         <PARAM name="scalex_particle" type="SCALEX">
             <VAL>
-                <D type="FUNCTION">1.0+0.3*cos(time+0.01+particleindex*1234)+0.015*cos(time*100+particleindex*1234)</D>
+                <D type="FUNCTION">1.0</D>
             </VAL>
         </PARAM>
         <PARAM name="scaley_particle" type="SCALEY">
             <VAL>
-                <D type="FUNCTION">1.0+0.3*cos(time+0.01+particleindex*1234)+0.015*cos(time*100+particleindex*1234)</D>
+                <D type="FUNCTION">1.0</D>
             </VAL>
         </PARAM>
         <PARAM name="scalez_particle" type="SCALEZ">
