--- a/src/assets/molrepos/moldeoorg/Speak/textaforming.cfg
+++ b/src/assets/molrepos/moldeoorg/Speak/textaforming.cfg
@@ -35,9 +35,9 @@
         </PARAM>
         <PARAM name="particlecolor" type="COLOR">
             <VAL>
-                <D type="FUNCTION">0.5+0.3*cos(particleindex*123445)</D>
-                <D type="FUNCTION">0.5+0.3*cos(particleindex*1235)</D>
-                <D type="FUNCTION">0.5+0.3*cos(particleindex*1235) + 0.5*abs(cos(time*3)) </D>
+                <D type="FUNCTION">0.8+0.2*cos(particleindex*123445)</D>
+                <D type="FUNCTION">0.8+0.2*cos(particleindex*1235)</D>
+                <D type="FUNCTION">0.8+0.2*cos(particleindex*1235) </D>
                 <D type="FUNCTION">1.0</D>
             </VAL>
         </PARAM>
@@ -60,6 +60,9 @@
         </PARAM>
         <PARAM name="texture" type="TEXTURE">
             <VAL>
+                <D type="TXT">full_chat_canvas</D>
+            </VAL>
+            <VAL>
                 <D type="TXT">trianguloborde_blanco.png</D>
             </VAL>
             <VAL>
@@ -76,7 +79,7 @@
         </PARAM>
         <PARAM name="texture_mode" type="NUM">
             <VAL>
-                <D type="NUM">0</D>
+                <D type="NUM">1</D>
             </VAL>
         </PARAM>
         <PARAM name="blending" type="BLENDING">
@@ -217,12 +220,12 @@
         </PARAM>
         <PARAM name="emittervectorx" type="FUNCTION">
             <VAL>
-                <D type="FUNCTION">1.0*(0.3+0.3*cos(time*0.5))</D>
+                <D type="FUNCTION">1.0*(0.3+0.03*cos(time*0.5*0))</D>
             </VAL>
         </PARAM>
         <PARAM name="emittervectory" type="FUNCTION">
             <VAL>
-                <D type="FUNCTION">1.0*(0.3+0.3*cos(time*0.5))</D>
+                <D type="FUNCTION">1.0*(0.3+0.03*cos(time*0.5*0))</D>
             </VAL>
         </PARAM>
         <PARAM name="emittervectorz" type="FUNCTION">
@@ -377,17 +380,17 @@
         </PARAM>
         <PARAM name="scalex" type="SCALEX">
             <VAL>
-                <D type="FUNCTION">1.0</D>
+                <D type="FUNCTION">1.0+0.2*cos(time0.001)</D>
             </VAL>
         </PARAM>
         <PARAM name="scaley" type="SCALEY">
             <VAL>
-                <D type="FUNCTION">1.0</D>
+                <D type="FUNCTION">1.0+0.2*cos(time0.001)</D>
             </VAL>
         </PARAM>
         <PARAM name="scalez" type="SCALEZ">
             <VAL>
-                <D type="FUNCTION">1.0</D>
+                <D type="FUNCTION">1.0+0.2*cos(time0.001)</D>
             </VAL>
         </PARAM>
         <PARAM name="eyex" type="FUNCTION">
