--- a/package.json
+++ b/package.json
@@ -23,54 +23,54 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/schematics": "0.0.43",
-    "@angular/animations": "^5.2.0",
-    "@angular/common": "^5.2.0",
-    "@angular/compiler": "^5.2.0",
-    "@angular/compiler-cli": "^5.2.0",
-    "@angular/core": "^5.2.0",
-    "@angular/forms": "^5.2.0",
-    "@angular/http": "^5.2.0",
-    "@angular/platform-browser": "^5.2.0",
-    "@angular/platform-browser-dynamic": "^5.2.0",
-    "@angular/platform-server": "^5.2.0",
-    "@angular/router": "^5.2.0",
-    "@types/webrtc": "0.0.22",
+    "@angular-devkit/schematics": "8.3.22",
+    "@angular/animations": "^8.2.14",
+    "@angular/common": "^8.2.14",
+    "@angular/compiler": "^8.2.14",
+    "@angular/compiler-cli": "8.2.14",
+    "@angular/core": "^8.2.14",
+    "@angular/forms": "^8.2.14",
+    "@angular/http": "^7.2.16",
+    "@angular/platform-browser": "^8.2.14",
+    "@angular/platform-browser-dynamic": "^8.2.14",
+    "@angular/platform-server": "^8.2.14",
+    "@angular/router": "^8.2.14",
+    "@types/webrtc": "0.0.25",
     "bootstrap": "^3.3.7",
-    "core-js": "^2.4.1",
-    "mathjs": "^3.9.1",
-    "ngx-bootstrap": "^2.0.1",
-    "node-osc": "^2.0.4",
-    "rxjs": "^5.5.6",
-    "three": "^0.83.0",
+    "core-js": "^3.6.4",
+    "mathjs": "^6.5.0",
+    "ngx-bootstrap": "^5.3.2",
+    "node-osc": "^4.1.4",
+    "rxjs": "^6.5.4",
+    "three": "^0.112.1",
     "ts-helpers": "^1.1.2",
-    "xml-js": "^1.6.2",
-    "xml2js": "^0.4.17",
-    "zone.js": "^0.8.20"
+    "xml-js": "^1.6.11",
+    "xml2js": "^0.4.23",
+    "zone.js": "^0.10.2"
   },
   "devDependencies": {
-    "@angular/cli": "^1.6.3",
+    "@angular/cli": "^8.3.22",
     "@angular/compiler-cli": "2.4.2",
-    "@types/jasmine": "^2.5.41",
-    "@types/mathjs": "0.0.33",
-    "@types/node": "^7.0.0",
-    "@types/three": "^0.81.0",
-    "codelyzer": "^4.0.2",
-    "electron": "^1.4.15",
-    "electron-packager": "^8.5.1",
-    "jasmine": "^2.5.2",
-    "jasmine-core": "2.5.2",
-    "jasmine-spec-reporter": "3.1.0",
-    "karma": "1.3.0",
-    "karma-chrome-launcher": "^2.0.0",
-    "karma-cli": "^1.0.1",
-    "karma-coverage-istanbul-reporter": "^0.2.0",
-    "karma-jasmine": "^1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.0",
-    "ts-node": "~2.0.0",
-    "tslint": "^5.9.1",
-    "typescript": "2.5.3",
-    "webdriver-manager": "11.1.1"
+    "@types/jasmine": "^3.5.0",
+    "@types/mathjs": "6.0.3",
+    "@types/node": "^13.1.6",
+    "@types/three": "^0.103.2",
+    "codelyzer": "^5.2.1",
+    "electron": "^7.1.9",
+    "electron-packager": "^14.2.0",
+    "jasmine": "^3.5.0",
+    "jasmine-core": "3.5.0",
+    "jasmine-spec-reporter": "4.2.1",
+    "karma": "4.4.1",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-cli": "^2.0.0",
+    "karma-coverage-istanbul-reporter": "^2.1.1",
+    "karma-jasmine": "^3.1.0",
+    "karma-jasmine-html-reporter": "^1.5.1",
+    "protractor": "~5.4.2",
+    "ts-node": "~8.6.2",
+    "tslint": "^5.20.1",
+    "typescript": "^3.7.4",
+    "webdriver-manager": "12.1.7"
   }
 }
