--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     }
   ],
   "scripts": {
-    "start": "ng serve -p 18080",
+    "start": "ng serve",
     "lint": "tslint \"src/**/*.ts\"",
     "test": "ng test",
     "pree2e": "webdriver-manager update",
@@ -30,7 +30,6 @@
     "@angular/compiler-cli": "8.2.14",
     "@angular/core": "^8.2.14",
     "@angular/forms": "^8.2.14",
-    "@angular/http": "^7.2.16",
     "@angular/platform-browser": "^8.2.14",
     "@angular/platform-browser-dynamic": "^8.2.14",
     "@angular/platform-server": "^8.2.14",
@@ -44,18 +43,20 @@
     "rxjs": "^6.5.4",
     "three": "^0.112.1",
     "ts-helpers": "^1.1.2",
+    "tslib": "^1.10.0",
     "xml-js": "^1.6.11",
     "xml2js": "^0.4.23",
-    "zone.js": "^0.10.2"
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~0.803.22",
     "@angular/cli": "^8.3.22",
     "@angular/compiler-cli": "2.4.2",
     "@types/jasmine": "^3.5.0",
     "@types/mathjs": "6.0.3",
     "@types/node": "^13.1.6",
     "@types/three": "^0.103.2",
-    "codelyzer": "^5.2.1",
+    "codelyzer": "^5.0.1",
     "electron": "^7.1.9",
     "electron-packager": "^14.2.0",
     "jasmine": "^3.5.0",
@@ -70,7 +71,7 @@
     "protractor": "~5.4.2",
     "ts-node": "~8.6.2",
     "tslint": "^5.20.1",
-    "typescript": "^3.7.4",
+    "typescript": "^3.5.3",
     "webdriver-manager": "12.1.7"
   }
 }
