Upgraded to Angular-Cli 8.3.22 / Angular 8.2.14, Typescript 3.5.3, Three.js 0.110.0, working nice!

--- a/src/assets/molrepos/basic/02_Plane/plane.cfg
+++ b/src/assets/molrepos/basic/02_Plane/plane.cfg
@@ -73,7 +73,7 @@
         </PARAM>
         <PARAM name="translatex" type="TRANSLATEX">
             <VAL>
-                <D type="FUNCTION">0.0</D>
+                <D type="FUNCTION">0.1*cos(time)</D>
             </VAL>
         </PARAM>
         <PARAM name="translatey" type="TRANSLATEY">
@@ -83,17 +83,17 @@
         </PARAM>
         <PARAM name="translatez" type="TRANSLATEZ">
             <VAL>
-                <D type="FUNCTION">-1.0+1*cos(time*0.1)</D>
+                <D type="FUNCTION">0.0</D>
             </VAL>
         </PARAM>
         <PARAM name="rotatex" type="ROTATEX">
             <VAL>
-                <D type="FUNCTION">45+45*cos(time*0.05)</D>
+                <D type="FUNCTION">0.0</D>
             </VAL>
         </PARAM>
         <PARAM name="rotatey" type="ROTATEY">
             <VAL>
-                <D type="FUNCTION">300*time</D>
+                <D type="FUNCTION">30*time</D>
             </VAL>
         </PARAM>
         <PARAM name="rotatez" type="ROTATEZ">
