--- a/package.json
+++ b/package.json
@@ -30,18 +30,22 @@
     "@angular/compiler-cli": "8.2.14",
     "@angular/core": "^8.2.14",
     "@angular/forms": "^8.2.14",
+    "@angular/http": "^7.2.16",
     "@angular/platform-browser": "^8.2.14",
     "@angular/platform-browser-dynamic": "^8.2.14",
     "@angular/platform-server": "^8.2.14",
     "@angular/router": "^8.2.14",
+    "@types/webgl2": "0.0.5",
     "@types/webrtc": "0.0.25",
     "bootstrap": "^3.3.7",
     "core-js": "^3.6.4",
     "mathjs": "^6.5.0",
     "ngx-bootstrap": "^5.3.2",
     "node-osc": "^4.1.4",
-    "rxjs": "^6.5.4",
-    "three": "^0.112.1",
+    "rxjs": "^6.4.0",
+    "rxjs-compat": "^6.4.0",
+    "three": "^0.110.0",
+    "three-trackballcontrols": "0.0.8",
     "ts-helpers": "^1.1.2",
     "tslib": "^1.10.0",
     "xml-js": "^1.6.11",
