--- a/src/assets/molrepos/basic/00_Image/image.cfg
+++ b/src/assets/molrepos/basic/00_Image/image.cfg
@@ -65,22 +65,22 @@
         </PARAM>
         <PARAM name="pos_cuad_x" type="FUNCTION" property="published">
             <VAL>
-                <D type="FUNCTION">0.1*cos(time)</D>
+                <D type="FUNCTION">0.0</D>
             </VAL>
         </PARAM>
         <PARAM name="pos_cuad_y" type="FUNCTION" property="published">
             <VAL>
-                <D type="FUNCTION">0.1*sin(time)</D>
+                <D type="FUNCTION">0.0</D>
             </VAL>
         </PARAM>
         <PARAM name="anc_cuad_x" type="FUNCTION" property="published">
             <VAL>
-                <D type="FUNCTION">0.8+0.2*cos(time)</D>
+                <D type="FUNCTION">0.9+0.1*cos(time)</D>
             </VAL>
         </PARAM>
         <PARAM name="alt_cuad_y" type="FUNCTION" property="published">
             <VAL>
-                <D type="FUNCTION">0.8+0.2*cos(time)</D>
+                <D type="FUNCTION">0.9+0.1*cos(time)</D>
             </VAL>
         </PARAM>
     </CONFIGPARAMS>
