--- a/package.json
+++ b/package.json
@@ -27,10 +27,9 @@
     "@angular/animations": "^8.2.14",
     "@angular/common": "^8.2.14",
     "@angular/compiler": "^8.2.14",
-    "@angular/compiler-cli": "8.2.14",
+    "@angular/compiler-cli": "^8.2.14",
     "@angular/core": "^8.2.14",
     "@angular/forms": "^8.2.14",
-    "@angular/http": "^7.2.16",
     "@angular/platform-browser": "^8.2.14",
     "@angular/platform-browser-dynamic": "^8.2.14",
     "@angular/platform-server": "^8.2.14",
@@ -44,7 +43,7 @@
     "node-osc": "^4.1.4",
     "rxjs": "^6.4.0",
     "rxjs-compat": "^6.4.0",
-    "three": "^0.110.0",
+    "three": "0.110.0",
     "three-trackballcontrols": "0.0.8",
     "ts-helpers": "^1.1.2",
     "tslib": "^1.10.0",
@@ -55,8 +54,7 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.803.22",
     "@angular/cli": "^8.3.22",
-    "@angular/compiler-cli": "2.4.2",
-    "@types/jasmine": "^3.5.0",
+    "@types/jasmine": "3.5.0",
     "@types/mathjs": "6.0.3",
     "@types/node": "^13.1.6",
     "@types/three": "^0.103.2",
@@ -75,7 +73,10 @@
     "protractor": "~5.4.2",
     "ts-node": "~8.6.2",
     "tslint": "^5.20.1",
-    "typescript": "^3.5.3",
+    "typescript": "3.5.3",
     "webdriver-manager": "12.1.7"
+  },
+  "optionalDependencies": {
+    "fsevents": "^2.1.2"
   }
 }
