--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     }
   ],
   "scripts": {
-    "start": "ng serve",
+    "start": "ng serve --port 8888",
     "lint": "tslint \"src/**/*.ts\"",
     "test": "ng test",
     "pree2e": "webdriver-manager update",
