Upgrade to angular8, upgrade to 0.9.69, full fixes, spriningt to 1.0

--- a/angular.json
+++ b/angular.json
@@ -72,8 +72,8 @@
             "karmaConfig": "./karma.conf.js",
             "scripts": [],
             "styles": [
-              "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "src/styles.css"
+              "./node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "./src/styles.css"
             ],
             "assets": [
               "src/assets",
