--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "MoldeoJS",
   "version": "0.9.63",
+  "main": "main.js",
   "licenses": [
     {
       "type": "MIT",
@@ -14,13 +15,13 @@
     "pree2e": "webdriver-manager update",
     "e2e": "protractor",
     "build": "ng build",
-    "prepare": "cp -a electron/. dist/",
-    "electron": "npm run prepare && electron ./dist",
-    "package": "npm run build && npm run prepare && ./node_modules/electron-packager/cli.js dist App --platform=linux --arch=all --out=dist-app --overwrite",
-    "buildelectron": "npm run build && npm run electron",
-    "buildsite": "npm version patch && ng build --prod --base-href .",
-    "buildsiteopt": "ng build --prod --build-optimizer --base-href . ",
-    "buildodoo": "ng build --base-href / && cp -R src/assets/molrepos dist/molrepos && cp -R src/assets/data dist/data"
+    "prepare:electron": "",
+    "start:electron": "npm run prepare:electron && electron .",
+    "build:package": "npm run build && npm run prepare:electron && ./node_modules/electron-packager/cli.js dist App --platform=linux --arch=all --out=dist-app --overwrite",
+    "build:electron": "ng build --base-href && npm run prepare:electron",
+    "build:site": "npm version patch && ng build --prod --base-href .",
+    "build:siteopt": "ng build --prod --build-optimizer --base-href . ",
+    "build:odoo": "ng build --base-href / && cp -R src/assets/molrepos dist/molrepos && cp -R src/assets/data dist/data"
   },
   "private": true,
   "dependencies": {
@@ -68,7 +69,7 @@
     "@types/node": "^13.1.6",
     "@types/three": "^0.103.2",
     "codelyzer": "^5.0.1",
-    "electron": "^7.1.9",
+    "electron": "^9.0.5",
     "electron-packager": "^14.2.0",
     "jasmine": "^3.5.0",
     "jasmine-core": "3.5.0",
