Upgrade moldeojs 0.9.21.65, added mouse[xyz]wheel

--- a/src/assets/molrepos/moldeoorg/fabri/EsferaEspiral/estrellas.cfg
+++ b/src/assets/molrepos/moldeoorg/fabri/EsferaEspiral/estrellas.cfg
@@ -381,7 +381,7 @@
         </PARAM>
         <PARAM name="scalex_particle" type="SCALEX">
             <VAL>
-                <D type="FUNCTION">0.5*cos(particleindex*0.1)</D>
+                <D type="FUNCTION">0.5*cos(particleindex*0.1)+mousexbuttonmiddle*10.0</D>
             </VAL>
             <VAL>
                 <D type="FUNCTION">0.5*cos(particleindex*0.1)</D>
@@ -466,12 +466,12 @@
         </PARAM>
         <PARAM name="rotatex" type="ROTATEX" property="published">
             <VAL>
-                <D type="FUNCTION">time*0.01</D>
+                <D type="FUNCTION">time*0.01+mouseybuttonleft*200</D>
             </VAL>
         </PARAM>
         <PARAM name="rotatey" type="ROTATEY" property="published">
             <VAL>
-                <D type="FUNCTION">time*2</D>
+                <D type="FUNCTION">time*2-mousexbuttonleft*200</D>
             </VAL>
         </PARAM>
         <PARAM name="rotatez" type="ROTATEZ" property="published">
@@ -518,7 +518,7 @@
         </PARAM>
         <PARAM name="eyez" type="FUNCTION">
             <VAL>
-                <D type="FUNCTION">10.0</D>
+                <D type="FUNCTION">10.0-mouseybuttonmiddle*10+mouseywheel*0.002</D>
             </VAL>
         </PARAM>
         <PARAM name="viewx" type="FUNCTION">
