--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "MoldeoJS",
-  "version": "0.0.1",
+  "version": "0.9.21.65",
+  "main": "main.js",
   "licenses": [
     {
       "type": "MIT",
@@ -13,13 +14,14 @@
     "test": "ng test",
     "pree2e": "webdriver-manager update",
     "e2e": "protractor",
-    "build": "ng build && cp -R src/assets/molrepos dist/molrepos && cp -R src/assets/data dist/data",
-    "prepare": "cp -a electron/. dist/",
-    "electron": "npm run prepare && electron ./dist",
-    "package": "npm run build && npm run prepare && ./node_modules/electron-packager/cli.js dist App --platform=linux --arch=all --out=dist-app --overwrite",
-    "buildelectron": "npm run build && npm run electron",
-    "buildsite": "ng build -prod --build-optimizer --base-href . && cp -R src/assets/molrepos dist/molrepos && cp -R src/assets/data dist/data",
-    "buildodoo": "ng build --base-href / && cp -R src/assets/molrepos dist/molrepos && cp -R src/assets/data dist/data"
+    "build": "ng build",
+    "prepare:electron": "",
+    "start:electron": "npm run prepare:electron && electron .",
+    "build:package": "npm run build && npm run prepare:electron && ./node_modules/electron-packager/cli.js dist App --platform=linux --arch=all --out=dist-app --overwrite",
+    "build:electron": "ng build --base-href && npm run prepare:electron",
+    "build:site": "npm version patch && ng build --prod --base-href .",
+    "build:siteopt": "ng build --prod --build-optimizer --base-href . ",
+    "build:odoo": "ng build --base-href / && cp -R src/assets/molrepos dist/molrepos && cp -R src/assets/data dist/data"
   },
   "private": true,
   "dependencies": {
@@ -37,16 +39,25 @@
     "@types/webgl2": "0.0.5",
     "@types/webrtc": "0.0.25",
     "bootstrap": "^3.3.7",
+    "buffer": "^5.4.3",
     "core-js": "^3.6.4",
     "mathjs": "^6.5.0",
+    "ml5": "^0.4.3",
     "ngx-bootstrap": "^5.3.2",
+    "ngx-socket-io": "^3.2.0",
     "node-osc": "^4.1.4",
+    "p5": "^0.10.2",
+    "progressbar.js": "^1.1.0",
     "rxjs": "^6.4.0",
     "rxjs-compat": "^6.4.0",
+    "stream": "0.0.2",
+    "string_decoder": "^1.3.0",
     "three": "0.110.0",
     "three-trackballcontrols": "0.0.8",
+    "tone": "^13.8.25",
     "ts-helpers": "^1.1.2",
     "tslib": "^1.10.0",
+    "ua-parser-js": "^0.7.21",
     "xml-js": "^1.6.11",
     "xml2js": "^0.4.23",
     "zone.js": "~0.9.1"
@@ -59,7 +70,7 @@
     "@types/node": "^13.1.6",
     "@types/three": "^0.103.2",
     "codelyzer": "^5.0.1",
-    "electron": "^7.1.9",
+    "electron": "^9.0.5",
     "electron-packager": "^14.2.0",
     "jasmine": "^3.5.0",
     "jasmine-core": "3.5.0",
