--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "MoldeoJS",
-  "version": "0.9.21.65",
+  "version": "0.10.21.65",
   "main": "main.js",
   "licenses": [
     {
@@ -25,17 +25,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/schematics": "9.1.15",
-    "@angular/animations": "^9.1.13",
-    "@angular/common": "^9.1.13",
-    "@angular/compiler": "^9.1.13",
-    "@angular/compiler-cli": "^9.1.13",
-    "@angular/core": "^9.1.13",
-    "@angular/forms": "^9.1.13",
-    "@angular/platform-browser": "^9.1.13",
-    "@angular/platform-browser-dynamic": "^9.1.13",
-    "@angular/platform-server": "^9.1.13",
-    "@angular/router": "^9.1.13",
+    "@angular-devkit/schematics": "10.2.3",
+    "@angular/animations": "^10.2.5",
+    "@angular/common": "^10.2.5",
+    "@angular/compiler": "^10.2.5",
+    "@angular/compiler-cli": "^10.2.5",
+    "@angular/core": "^10.2.5",
+    "@angular/forms": "^10.2.5",
+    "@angular/platform-browser": "^10.2.5",
+    "@angular/platform-browser-dynamic": "^10.2.5",
+    "@angular/platform-server": "^10.2.5",
+    "@angular/router": "^10.2.5",
     "@types/webgl2": "0.0.5",
     "@types/webrtc": "0.0.25",
     "bootstrap": "^3.3.7",
@@ -56,15 +56,15 @@
     "three-trackballcontrols": "0.0.8",
     "tone": "^13.8.25",
     "ts-helpers": "^1.1.2",
-    "tslib": "^1.10.0",
+    "tslib": "^2.0.0",
     "ua-parser-js": "^0.7.21",
     "xml-js": "^1.6.11",
     "xml2js": "^0.4.23",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.901.15",
-    "@angular/cli": "^9.1.15",
+    "@angular-devkit/build-angular": "~0.1002.3",
+    "@angular/cli": "^10.2.3",
     "@types/jasmine": "3.5.0",
     "@types/mathjs": "6.0.3",
     "@types/node": "^12.11.1",
@@ -73,18 +73,18 @@
     "electron": "^9.0.5",
     "electron-packager": "^14.2.0",
     "jasmine": "^3.5.0",
-    "jasmine-core": "3.5.0",
-    "jasmine-spec-reporter": "4.2.1",
-    "karma": "4.4.1",
-    "karma-chrome-launcher": "^3.1.0",
+    "jasmine-core": "~3.5.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~5.0.0",
+    "karma-chrome-launcher": "~3.1.0",
     "karma-cli": "^2.0.0",
-    "karma-coverage-istanbul-reporter": "^2.1.1",
-    "karma-jasmine": "^3.1.0",
-    "karma-jasmine-html-reporter": "^1.5.1",
-    "protractor": "~5.4.2",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
+    "protractor": "~7.0.0",
     "ts-node": "~8.6.2",
-    "tslint": "^5.20.1",
-    "typescript": "3.8.3",
+    "tslint": "~6.1.0",
+    "typescript": "4.0.7",
     "webdriver-manager": "12.1.7"
   },
   "optionalDependencies": {
