--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "MoldeoJS",
-  "version": "0.10.21.65",
+  "version": "0.11.21.65",
   "main": "main.js",
   "licenses": [
     {
@@ -25,17 +25,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/schematics": "10.2.3",
-    "@angular/animations": "^10.2.5",
-    "@angular/common": "^10.2.5",
-    "@angular/compiler": "^10.2.5",
-    "@angular/compiler-cli": "^10.2.5",
-    "@angular/core": "^10.2.5",
-    "@angular/forms": "^10.2.5",
-    "@angular/platform-browser": "^10.2.5",
-    "@angular/platform-browser-dynamic": "^10.2.5",
-    "@angular/platform-server": "^10.2.5",
-    "@angular/router": "^10.2.5",
+    "@angular-devkit/schematics": "11.2.12",
+    "@angular/animations": "^11.2.13",
+    "@angular/common": "^11.2.13",
+    "@angular/compiler": "^11.2.13",
+    "@angular/compiler-cli": "^11.2.13",
+    "@angular/core": "^11.2.13",
+    "@angular/forms": "^11.2.13",
+    "@angular/platform-browser": "^11.2.13",
+    "@angular/platform-browser-dynamic": "^11.2.13",
+    "@angular/platform-server": "^11.2.13",
+    "@angular/router": "^11.2.13",
     "@types/webgl2": "0.0.5",
     "@types/webrtc": "0.0.25",
     "bootstrap": "^3.3.7",
@@ -63,19 +63,19 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1002.3",
-    "@angular/cli": "^10.2.3",
-    "@types/jasmine": "3.5.0",
+    "@angular-devkit/build-angular": "~0.1102.12",
+    "@angular/cli": "^11.2.12",
+    "@types/jasmine": "~3.6.0",
     "@types/mathjs": "6.0.3",
     "@types/node": "^12.11.1",
     "@types/three": "^0.103.2",
-    "codelyzer": "^5.1.2",
+    "codelyzer": "^6.0.0",
     "electron": "^9.0.5",
     "electron-packager": "^14.2.0",
     "jasmine": "^3.5.0",
-    "jasmine-core": "~3.5.0",
+    "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.0.0",
+    "karma": "~6.3.2",
     "karma-chrome-launcher": "~3.1.0",
     "karma-cli": "^2.0.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
