--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "MoldeoJS",
-  "version": "0.11.21.65",
+  "version": "11.21.88",
   "main": "main.js",
   "licenses": [
     {
@@ -9,22 +9,22 @@
     }
   ],
   "scripts": {
-    "start": "ng serve --port 8888",
+    "start": "node --max_old_space_size=4096 node_modules/@angular/cli/bin/ng serve  --progress --port 8888",
+    "start:electron": "electron .",
     "lint": "tslint \"src/**/*.ts\"",
-    "test": "ng test",
+    "test": "node --max_old_space_size=4096 node_modules/@angular/cli/bin/ng test",
     "pree2e": "webdriver-manager update",
     "e2e": "protractor",
-    "build": "ng build",
-    "prepare:electron": "",
-    "start:electron": "npm run prepare:electron && electron .",
+    "build": "node --max_old_space_size=4096 node_modules/@angular/cli/bin/ng build --progress",
     "build:package": "npm run build && npm run prepare:electron && ./node_modules/electron-packager/cli.js dist App --platform=linux --arch=all --out=dist-app --overwrite",
-    "build:electron": "ng build --base-href && npm run prepare:electron",
-    "build:site": "npm version patch && ng build --prod --base-href .",
-    "build:siteopt": "ng build --prod --build-optimizer --base-href . ",
-    "build:odoo": "ng build --base-href / && cp -R src/assets/molrepos dist/molrepos && cp -R src/assets/data dist/data"
+    "build:site": "git commit -am 'Upgrading and building site' && npm version patch && node --max_old_space_size=4096 node_modules/@angular/cli/bin/ng build --configuration production --progress --base-href .",
+    "build:siteopt": "node --max_old_space_size=4096 node_modules/@angular/cli/bin/ng build --configuration production  --progress --build-optimizer --base-href .",
+    "build:electron": "node --max_old_space_size=4096 node_modules/@angular/cli/bin/ng build --base-href ./ && electron .",
+    "build:odoo": "node --max_old_space_size=4096 node_modules/@angular/cli/bin/ng build --base-href / && cp -R src/assets/molrepos dist/molrepos && cp -R src/assets/data dist/data"
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^3.0.0-beta.0",
     "@angular-devkit/schematics": "11.2.12",
     "@angular/animations": "^11.2.13",
     "@angular/common": "^11.2.13",
@@ -36,13 +36,21 @@
     "@angular/platform-browser-dynamic": "^11.2.13",
     "@angular/platform-server": "^11.2.13",
     "@angular/router": "^11.2.13",
+    "@fortawesome/angular-fontawesome": "^0.8.2",
+    "@fortawesome/fontawesome-common-types": "^0.2.35",
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-brands-svg-icons": "^5.15.3",
+    "@fortawesome/free-regular-svg-icons": "^5.15.3",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@schematics/angular": "^11.2.13",
     "@types/webgl2": "0.0.5",
     "@types/webrtc": "0.0.25",
     "bootstrap": "^3.3.7",
     "buffer": "^5.4.3",
     "core-js": "^3.6.4",
+    "html2canvas": "^1.0.0-rc.7",
     "mathjs": "^6.5.0",
-    "ml5": "^0.4.3",
+    "ml5": "^0.6.1",
     "ngx-bootstrap": "^5.3.2",
     "ngx-socket-io": "^3.2.0",
     "node-osc": "^4.1.4",
@@ -63,6 +71,7 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
+    "@angular-builders/custom-webpack": "^11.1.1",
     "@angular-devkit/build-angular": "~0.1102.12",
     "@angular/cli": "^11.2.12",
     "@types/jasmine": "~3.6.0",
@@ -70,8 +79,8 @@
     "@types/node": "^12.11.1",
     "@types/three": "^0.103.2",
     "codelyzer": "^6.0.0",
-    "electron": "^9.0.5",
-    "electron-packager": "^14.2.0",
+    "electron": "^9.4.4",
+    "electron-packager": "^14.2.1",
     "jasmine": "^3.5.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
