--- a/src/assets/molrepos/myshmup/explo_02b/particlessimple.cfg
+++ b/src/assets/molrepos/myshmup/explo_02b/particlessimple.cfg
@@ -12,9 +12,9 @@
         </PARAM>
         <PARAM name="color" type="COLOR" property="published">
             <VAL>
-                <D type="FUNCTION" code="RED">1.000000</D>
-                <D type="FUNCTION" code="GREEN">1.000000</D>
-                <D type="FUNCTION" code="BLUE">1.000000</D>
+                <D type="FUNCTION" code="RED">0.901961</D>
+                <D type="FUNCTION" code="GREEN">0.156863</D>
+                <D type="FUNCTION" code="BLUE">0.000000</D>
                 <D type="FUNCTION" code="ALPHA">1.0</D>
             </VAL>
         </PARAM>
@@ -31,7 +31,7 @@
         <PARAM name="particlecolor" type="COLOR" property="published">
             <VAL>
                 <D type="FUNCTION" code="RED">0.9*abs(cos(particleindex*times+0.3))</D>
-                <D type="FUNCTION" code="GREEN">0.9*abs(cos(particleindex*times))</D>
+                <D type="FUNCTION" code="GREEN">0.9*abs(cos(particleindex*times+0.8))</D>
                 <D type="FUNCTION" code="BLUE">0.9*abs(cos(particleindex*times+0.7))</D>
                 <D type="FUNCTION" code="ALPHA">1.0</D>
             </VAL>
@@ -55,7 +55,7 @@
         </PARAM>
         <PARAM name="texture" type="TEXTURE" property="published">
             <VAL>
-                <D type="TXT">trigon-compose-super-white.png</D>
+                <D type="TXT">divine-compose.png</D>
             </VAL>
             <VAL>
                 <D type="TXT">default</D>
@@ -456,7 +456,7 @@
         </PARAM>
         <PARAM name="scalex" type="SCALEX">
             <VAL>
-                <D type="FUNCTION">1.0</D>
+                <D type="FUNCTION">0.5</D>
             </VAL>
         </PARAM>
         <PARAM name="scaley" type="SCALEY">
