--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     }
   ],
   "scripts": {
-    "start": "node --max_old_space_size=4096 node_modules/@angular/cli/bin/ng serve  --progress --port 8888",
+    "start": "node --openssl-legacy-provider --max_old_space_size=4096 node_modules/@angular/cli/bin/ng serve  --progress --port 8888",
     "start:electron": "electron .",
     "lint": "tslint \"src/**/*.ts\"",
     "test": "node --max_old_space_size=4096 node_modules/@angular/cli/bin/ng test",
